--- a/eagletcraft*1.8.8.html
+++ b/eagletcraft*1.8.8.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <body>
   <div id="container">
     <iframe id="fr" width="100%" height="100%" frameborder="0" allowfullscreen=""></iframe>
