--- a/eagle[t]craft*_1.12.2_.html
+++ b/eagle[t]craft*_1.12.2_.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html><head><base target="_blank"><script id="gamemonetize-sdk">Couldn't find the requested file /sedk.js in testamalame/sef.</script></head><body><div id="container">
   <iframe id="fr" width="100%" height="100%" frameborder="0" allowfullscreen=""></iframe>
 </div>
